[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.1",
    "pgvector>=0.4.2",
    "pika>=1.3.2",
    "psycopg[binary]>=3.3.2",
    "sentence-transformers>=5.2.0",
    "sqlmodel[binary]>=0.0.31",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
